--- a/css/style.css
+++ b/css/style.css
@@ -749,6 +749,10 @@ textarea.textarea-lg {
 }
 
 @media screen and (max-width:540px) {
+    body {
+        min-height: 50rem;
+      padding-top: 3rem;
+    }
 
     #about-us {
         padding: 3%;
@@ -762,6 +766,10 @@ textarea.textarea-lg {
         margin: 0 auto;
         display: flex;
         flex-direction: column;
+    }
+    .navbar-brand{
+        width: 50px;
+        height: 50px;
     }
 }
 
